# rustcwb-website

./: .env.sample  .gitignore  Cargo.toml  LICENSE-APACHE  key  key.pub  readme.md
.github/workflows/: checks.yml  deploy.yml
deploy/: deploy.sh
domain/: Cargo.toml
domain/src/: entities.rs  gateways.rs  lib.rs  use_cases.rs
domain/src/use_cases/: call_for_papers.rs  future_meet_up.rs  get_meet_up.rs  login.rs  meet_up.rs  meet_up_goers.rs  mod.rs  show_admin_page.rs  show_home_page.rs  voting.rs
gateway/: Cargo.toml
gateway/migrations/: 20240613191500_PastMeetUps.sql  20240613201100_FutureMeetUps.sql  20240613201100_MeetUps.sql  20240617213000_Users.sql  20240617213500_GithubLogins.sql  20240621211200_PaperMeetUp.sql  2024062123200_MeetUpPaperVotes.sql  20240624212300_MeetUpPapersVotesMeetUpIndex.sql  20240705210000_MeetUpGoers.sql
gateway/src/: github.rs  lib.rs
gateway/src/sqlite_database/: future_meet_up_gateway.rs  meet_up_gateway.rs  meet_up_goers_gateway.rs  mod.rs  paper_gateway.rs  past_meet_up_gateway.rs  user_gateway.rs  vote_gateway.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: Cargo.toml  call_for_papers_test.rs  get_meet_up_test.rs  login_test.rs  meet_up_goers_test.rs  meet_up_test.rs  show_admin_page_test.rs  show_home_page_test.rs  voting_test.rs
tests/src/: lib.rs
web-server/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
web-server/public/assets/css/: styles.css
web-server/src/: app.rs  extractors.rs  main.rs
web-server/src/controllers/: call_for_papers.rs  index.rs  meet_up.rs  meet_up_goers.rs  mod.rs  past_meet_up.rs  preview_markdown.rs  user.rs  voting.rs
web-server/src/controllers/admin/: future_meet_up.rs  meet_up.rs  mod.rs
web-server/src/templates/: admin.html  base.html  call_for_papers.html  home.html  success.html  user.html  voting.html
web-server/src/templates/components/admin/future_meet_up/: call_for_papers.html  future_meet_up.html  location.html  no_future_meet_up.html  scheduled.html  voting.html
web-server/src/templates/components/future_meet_ups/: call_for_papers.html  future_meet_up.html  location.html  register_button.html  scheduled.html  voting.html
web-server/src/templates/components/past_meet_ups/: past_meet_up.html  past_meet_up_metadata.html  past_meet_ups.html
web-server/src/templates/components/vote_paper/: paper.html  paper_details.html
web-server/styles/: styles.css
