[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
