[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
] }
anyhow = "1"
domain = { path = "../domain" }
chrono = { version = "0.4.38", features = ["serde"] }
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.1", features = ["serde"] }
