[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
] }
anyhow = "1"
domain = { path = "../domain" }
chrono = { version = "0.4.38", features = ["serde"] }
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.1", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.117"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
