[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway = { path = "../gateway" }
domain = { path = "../domain" }
anyhow = "1"
axum = { version = "0.7" }
axum-htmx = "0.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
minijinja = { version = "1" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.1", features = ["serde"] }
async-trait = "0.1.80"
base64 = "0.22.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }
